*Empty MediaWiki Message*

--- a/Hans_Peter_Janssens.mw
+++ b/Hans_Peter_Janssens.mw
@@ -5,13 +5,13 @@ In ‘t joar 1992 most ’n in [[ Londn]] ‘n  nieuwe noame zoekn, omdat er doa
 *Keuninklik Muziekconservatorium [[Gent]]. J’oalde doa ’n eeste prys ounder leidinge van Zegher Vandersteene, Malcolm King, Erika Pauwels en Paule Daloze.
 * In [[Iengeland|Ingeland]]: Binst de zomerstages in Alden Biesen kwamt ’n in contact mè Noelle Barker. Zy overtuugdeg èm vor ’n studiebeuze an te vroagn vo de Guildhall School of Music and Drama in Londn. Ze gaft doa lesse en j’oalde doa ’n postgraduoat Vocal Studies. Ansluutnd kost ’n noa de Music Academy of the West Santa Barbara. Die Spartoanse ipleidinge van ‘t Angelsaksisch ounderwyssysteem  èt em g’olpn vo ’t loater woa te moakn in  d’arde musicalweireld.
 Achter Santa Barbara ginkt ‘n doa vier joar mee met ’n reiznd operagezelschap.
-=='t begun van zyn carrière==
+=='t Begun van zyn carrière==
 In z’n eeste joarn zoungt ‘n surtout muziek van [[Johann Sebastian Bach]], o.a. de [[Jesus]]rolle in de ''Passionen'' mè Patrick Peire, moar ook de rolln ''Don Giovanni'' en ''Guglielmo'' in ''Cosi fan tutte'' van [[Wolfgang Amadeus Mozart]].
 
 Loater ist ’n overgestapt noa de ''musical'' met de rolle van ''Padre''  in ''De Man van la Mancha'' met ’t Keuninklik Ballet van Vloandern. Ook ''Jesus Christ Superstar'', ''Chess'' en ''Sacco & Vanzetti''. In ''The Phantom of the Opera'' zoungt 'n de dubbelrolle, zowel Phantom as Raoul. En ook in ''Jekyll & Hyde'', zowel Jekyl as Hyde.
 
 ==Les Misérables==
-In 1998 kwamt er ’n nieuwe fase in z’n carrière. In de stadsschouwburg van Antwerpn speeldegt y de rolle van  ''Valjean'' in de Nederlandstoalige versie van ''Les Misérables'', van meie 1998 tout april 1999. Loater ook in ’t Frans en ton durfdet y ’n auditie doen in Londn, woa dat de musical ol tweeëntwintig joar speelt. Van oktober 2000 tout juli 2003 èt ’n doa ''Valjean'' gespeeld, acht voorstellingn per weke (de zundag twee). En j’ist er gelauwerd as langst spelendn  Valjean ooit.
+In 1998 kwamt er ’n nieuwe fase in z’n carrière. In de stadsschouwburg van Antwerpn speeldegt ie de rolle van  ''Valjean'' in de Nederlandstoalige versie van ''Les Misérables'', van meie 1998 tout april 1999. Loater ook in ’t Frans en ton durfdegt ie ’n auditie doen in Londn, woa dat de musical ol tweeëntwintig joar speelt. Van oktober 2000 tout juli 2003 èt ’n doa ''Valjean'' gespeeld, acht voorstellingn per weke (de zundag twee). En j’ist er gelauwerd as langst spelendn  Valjean ooit.
 
 Van 2006 tout juli 2008 speelt ’n de rolle van de slechtn, ''Javert'' van  Les Misérables in the Queens Theatre in Londn.
 ==Externe koppelinge==
