--- a/Weireldkampioenschappn_velokoerse_2005.mw
+++ b/Weireldkampioenschappn_velokoerse_2005.mw
@@ -24,10 +24,16 @@ Alejandro Valverde gounk ’n sprint an. Moar in de latste vichtig meter wos ’
 #Julian Dean [[Ofbeeldienge:Flag of New Zealand.svg|20px]] z.t.
 #Martin Elmiger [[Ofbeeldienge:Flag of Switzerland.svg|20px]] z.t.
 
-== Uutslag tydrit (elite) ==
+== Andere winnoars ==
+*Tydrit ventn (elite)
 #Michael Rogers 53' 34" 49 [[Ofbeeldienge:Flag of Australia.svg|20px]]
 #José Iván Gutiérrez 53' 58" 26 [[Ofbeeldienge:Flag of Spain.svg|20px]]
 #[[Fabian Cancellara]] 53' 58" 38 [[Ofbeeldienge:Flag of Switzerland.svg|20px]]
+
+*Wegrit ventn (beloftn): Dmytro Grabovskyy [[Ofbeeldienge:Flag of Ucrain.svg|20px]]
+*Wegrit vrouwn: Regina Schleicher [[Ofbeeldienge:Flag of Germany.svg|20px]]
+*Tydrit ventn (beloftn): Mikhail Ignatiev [[Ofbeeldienge:Flag of Russia.svg|20px]]
+*Tydrit vrouwn: Karin Thürig [[Ofbeeldienge:Flag of Switzerland.svg|20px]] 
 
 [[Category:Weireldkampioenschap velokoerse]]
 
