/* Andere winnoars */ vlaggetje verbeterd

--- a/Weireldkampioenschappn_velokoerse_2005.mw
+++ b/Weireldkampioenschappn_velokoerse_2005.mw
@@ -30,7 +30,7 @@ Alejandro Valverde gounk ’n sprint an. Moar in de latste vichtig meter wos ’
 #José Iván Gutiérrez 53' 58" 26 [[Ofbeeldienge:Flag of Spain.svg|20px]]
 #[[Fabian Cancellara]] 53' 58" 38 [[Ofbeeldienge:Flag of Switzerland.svg|20px]]
 
-*Wegrit ventn (beloftn): Dmytro Grabovskyy [[Ofbeeldienge:Flag of Ucrain.svg|20px]]
+*Wegrit ventn (beloftn): Dmytro Grabovskyy [[Ofbeeldienge:Flag of Ukraine.svg|20px]]
 *Wegrit vrouwn: Regina Schleicher [[Ofbeeldienge:Flag of Germany.svg|20px]]
 *Tydrit ventn (beloftn): Mikhail Ignatiev [[Ofbeeldienge:Flag of Russia.svg|20px]]
 *Tydrit vrouwn: Karin Thürig [[Ofbeeldienge:Flag of Switzerland.svg|20px]] 
