--- a/Weireldkampioenschappn_velokoerse_2005.mw
+++ b/Weireldkampioenschappn_velokoerse_2005.mw
@@ -5,7 +5,7 @@ In ’t êeste dêel van de koers woarn d’r viere vôorn (Vasilev, Lopez Marti
 
 De Spanjoardn rêedn vele op kop. Zyder wilnde de cours ard moakn, want nunder sprintkanon [[Oscar Freire]] dei ni mei. In de vorlatste rounde ontstoug ’t er e nieuw kopgroeptje mi twi Belgen: [[Philippe Gilbert]] en [[Stijn Devolder]]. D’anger woarn Calcagni, Lagoetin, Davis, Perdiguero, Valverde, Pereiro, Piil, Wegmann, Laverde en [[Paolo Bettini]]. Bettini attakeerde en êest koste ollêne Wegmann volgen. Gilbert, Devolder, Valverde, Perdiguero en Piil kostn doarachter ouk ansluutn. ‘t Peletong volgde op minder of 30 secondn. 
 
-In de laatste ronde wos olles were t’erdoen. ’t Zagt er nar uut da ’t e massasprint gounke zyn, en ollêne Petacchi, [[Robbie McEwen]] en Boonen speelnde op dat moment nog mei. Karsten Kroon attakeerde en d’r kwam e nieuwn kopgroep mit ouk Vinokourov , Bettini en Leukemans.  Nu veranderde ’t van slag om slinger.
+In de laatste ronde wos olles were t’erdoen. ’t Zag 't er nar uut da ’t e massasprint gounke zyn, en ollêne Petacchi, [[Robbie McEwen]] en Boonen speelnde op dat moment nog mei. Karsten Kroon attakeerde en d’r kwam e nieuwn kopgroep mit ouk Vinokourov , Bettini en Leukemans.  Nu veranderde ’t van slag om slinger.
 
 In ’n latstn kilometer voerde [[Peter Van Petegem]] de forsing: e wilde zyn groeptje werebriegn by de koplopers want van de sprinters adde ollêne Boonen ’t latste klemmetje overleefd (McEwen en Petacchi nieje). 
 Vinokourov, Bettini, Boogerd, Moerenhout, Serrano en Stangelj goungn de latste rechte lyne in, mi e poar meters vôorsproung. Moa d’achtervolgers kêernde were. ’t Belgisch team (met ounder anger Mario Aerts, Nick Nuyens, Peter Van Petegem en Bjorn Leukemans) adde beirewerk verricht.
@@ -40,3 +40,4 @@ Alejandro Valverde gounk ’n sprint an. Moar in de latste vichtig meter wos ’
 [[da:VM i landevejscykling 2005]]
 [[de:Straßen-Radweltmeisterschaft 2005]]
 [[en:2005 UCI Road World Championships - Men's Road Race]]
+[[nl:Wereldkampioenschap wielrennen 2005]]
