*Empty MediaWiki Message*

--- a/Weireldkampioenschappn_velokoerse_2005.mw
+++ b/Weireldkampioenschappn_velokoerse_2005.mw
@@ -1,4 +1,4 @@
-'t '''Weireldkampioenschap koers 2005''' wos organiseerd in [[Madrid]] ([[Spanje]]). De koers vo de elite by de mann wos 273 km lank. Winnoare wos [[Tom Boonen]].  
+'t '''Weireldkampioenschap koers 2005''' wos organiseerd in [[Madrid]] ([[Spanje]]) van 20 tout en met 25 september 2005. De koers vo de elite by de mann wos 273 km lank op een euvelachtig parcours. Winnoare wos [[Tom Boonen]].  
 
 == Koersverloop (elite) ==
 In ’t êeste dêel van de koers woarn d’r viere vôorn (Vasilev, Lopez Martin, Raison, Muravyev), moa dedie speelnde gin rolle in ’t verder verloop van de wedstryd. ’t Parcours wos 273 km lank, moa ‘t wos moa in de latste 50 km da ‘t spannend kwam. 
