*Empty MediaWiki Message*

--- a/Tom_Boonen.mw
+++ b/Tom_Boonen.mw
@@ -9,7 +9,7 @@ Boonen is echt prof ekommn in 2002 byn US Postal (in 2000 wos 'n doar ol eki sta
 
 't Joar derup gienk 'n no Quick Step-Davitamon, de ploeg van [[Patrick Lefevere]] en Johan Museeuw. 
 
-Zyn beste joar tout nu toe is zeker 2005, e joar woarin dat 'n nie ollêne de Rounde van Vloandern en Parys-Roubaix wonne, mor ouk de Rounde van België, 'n E3 Prys, 2 rittn in de Rounde van Vrankryk en weireldkampioen in Madrid.
+Zyn beste joar tout nu toe is zeker 2005, e joar woarin dat 'n nie ollêne de Rounde van Vloandern en Parys-Roubaix wonne, mor ouk de Rounde van België, 'n E3 Prys, 2 rittn in de Rounde van Vrankryk en [[Weireldkampioenschappn velokoerse (2005)|weireldkampioen in Madrid]].
 
 ==Belangrykste overwinniengn==
 ===Klassiekers===
