--- a/Iengels_kerkof.mw
+++ b/Iengels_kerkof.mw
@@ -28,8 +28,9 @@ De Iengelsche kerkoven trekkn ol styf op makoar, en dat is gin toevol. Een overz
 :: Doarounder: e religieus têekn of 't Victoria Cross.
 === Ornamentn ===
 * D'r stoat ossan e grôot kruus woa dat er e broenzn zweird an angt, 't ''Cross of Sacrifice'' (Offerkruus). Dat kruus wos e gedacht van [[Sir Reginald Blomfield|Reginald Blomfield]], een Iengelschen architect. 't Kruus bestoat, na volgens 't kerkof woa dat 't stoat, in drie verschillige grottes: 4,5 en 9 meter. 't Ziet er wel azo uut, moar eigentlik is 't ni bedoeld lik e religieus symbool. 
-* Op kerkoovn mi mêer of 1.000 groavn stoat er e wittn oltoarstêen, de ''Stone of remembrance''. 't Ontwerp is van [[Sir Edwin Lutyens]]. De tekste die d'rop stoat is ''Their name liveth for evermore'' (Da nunder noame bluuft vodderleevn van generoasje op generoasje). 't Opschrift wos ekoozn deur de schryver [[Rudyard Kipling]]; 't is e vers uut 'n [[Bybel]], mêer bepoald uut Wijsheid van Jezus Sirach 44:14. D'ofmetiengn van de Stone of remembrance:  1,5 meiter oge, 3,5 meiters lange - en d'r zyn 3 trappn. 
+* Op kerkoovn mi mêer of 1.000 groavn stoat er e wittn oltoarstêen, de ''Stone of remembrance''. 't Ontwerp is van [[Sir Edwin Lutyens]]. De tekste die d'rop stoat is ''Their name liveth for evermore'' (vertoald: Da nunder noame vor ossan bluuft vodderleevn). 't Opschrift wos ekoozn deur de schryver [[Rudyard Kipling]]; 't is e vers uut 'n [[Bybel]], mêer bepoald uut Wijsheid van Jezus Sirach 44:14. D'ofmetiengn van de Stone of Remembrance: 1,5 meiter oge, 3,5 meiters lange - en d'r zyn 3 trappn. 
 * Ier en doa vinge j'ouk outn rustbankn. Dedie zyn een ontwerp van Sir Edwin Lutyens.
+
 === Beplantieng ===
 De ''frontborders'', de smolle vôorn ground vôor de stêen, zyn beplant mi bodemdekkers. Dedie zorn d'r vôorn dat er gin vule môzeplekkn komn op de witte stêenn, a 't rint. Om of te wisseln stoan d'r dikkers ouk rôozn. In de ''backborders'', an 'n achterkant van de stêen, stoan d'r oggere plantn of êesters om d'êentonigied e bitje te deurbreekn. 
 === Andere kenmerkn===
