--- a/Iengels_kerkof.mw
+++ b/Iengels_kerkof.mw
@@ -32,7 +32,8 @@ De Iengelsche kerkoven trekkn ol styf op makoar, en dat is gin toevol. Een overz
 * Ier en doa vinge j'ouk outn rustbankn. Dedie zyn een ontwerp van Sir Edwin Lutyens.
 
 === Beplantieng ===
-De ''frontborders'', de smolle vôorn ground vôor de stêen, zyn beplant mi bodemdekkers. Dedie zorn d'r vôorn dat er gin vule môzeplekkn komn op de witte stêenn, a 't rint. Om of te wisseln stoan d'r dikkers ouk rôozn. In de ''backborders'', an 'n achterkant van de stêen, stoan d'r oggere plantn of êesters om d'êentonigied e bitje te deurbreekn. 
+De ''frontborders'', de smolle vôorn ground vôor de stêen, zyn beplant mi bodemdekkers. Dedie zorn d'r vôorn dat er gin vule môzeplekkn komn op de witte stêenn, a 't rint. Om of te wisseln stoan d'r dikkers ouk rôozn. In de ''backborders'', an 'n achterkant van de stêen, stoan d'r oggere plantn of êesters om d'êentônigied e bitje te deurbreekn.
+
 === Andere kenmerkn===
 D'r is ouk e register, woa da bezoekers nunder noame en nunder beviendiengn in kunn schryvn. De mêeste menschen schryvn etwot lik: ''nôois gin ôorlog ne mi'', of ''rust in vrede''.
 
