--- a/Trappist_Westvleteren.mw
+++ b/Trappist_Westvleteren.mw
@@ -1,5 +1,5 @@
 {{plat|Poperiengs| (by gebrek an Vleters)}} 
-[[Ofbeeldienge:Westvleteren-beer.jpg|right|thumb|De 3 ''driëndertigers'' lasen makoar]]
+[[Ofbeeldienge:Westvleteren-beer.jpg|right|thumb|Van links na reks: Westvleteren 12, Westvleteren 8, Westvleteren Blond]]
 De '''Trappist Westvleteren''' (oek wel enoamd 'Sixtus') is e [[trappist]] uut [[West-Vloandern]]. 't Is ebrouwn deur de [[poaters Trappistn]] uut [[Westvletern (Vletern)|Westvletern]] sedert 1839. Internationoale bierkenners die de Westvleteren ontdekt en, zeggn da de Westvleteren 12 't beste bier ter weireld is.<ref>[http://query.nytimes.com/gst/fullpage.html?res=9403E1DE153EF931A2575BC0A9639C8B63&scp=1&sq=Westvleteren&st=nyt New York Times, 12/08/2005: ''When You Say Westvleteren, You've Said It All''], URL bekeekn op 20/02/2008</ref> 
 
 De vroage na 'n Trappist is grôot, moa de poaters refuseern om mêer te produceern dan da ze strikt enoomn nôdig en.<ref>[http://online.wsj.com/public/article/SB119638625032008897.html Wall Street Journal, 30/11/2007: ''Trappist Command: Thou Shalt Not Buy Too Much of Our Beer''], URL bekeekn op 20/02/2008</ref> Ze brouwn moa om en by de 4.700 ectoliters per joar.<ref>[http://www.nieuwsblad.be/Article/Detail.aspx?articleID=go910fg1j Het Nieuwsblad, 21/08/2006], URL bekeekn op 20/02/2008</ref> Die schoarste verkloart dêels ouk 't weireldwyd succes.
