/* Sôortn & uutzicht */  fotootje bierbak nog toe te voegen... ('k goan e ki goan kykn in myn kelder :-)

--- a/Trappist_Westvleteren.mw
+++ b/Trappist_Westvleteren.mw
@@ -5,7 +5,7 @@ De '''Trappist Westvleteren''' (oek wel enoamd 'Sixtus') is e [[trappist]] uut [
 De vroage na 'n Trappist is grôot, moa de poaters refuseern om mêer te produceern dan da ze strikt enoomn nôdig en.<ref>[http://online.wsj.com/public/article/SB119638625032008897.html Wall Street Journal, 30/11/2007: ''Trappist Command: Thou Shalt Not Buy Too Much of Our Beer''], URL bekeekn op 20/02/2008</ref> Ze brouwn moa om en by de 4.700 ectoliters per joar.<ref>[http://www.nieuwsblad.be/Article/Detail.aspx?articleID=go910fg1j Het Nieuwsblad, 21/08/2006], URL bekeekn op 20/02/2008</ref> Die schoarste verkloart dêels ouk 't weireldwyd succes.
 
 == Sôortn & uutzicht==
-De flesjes en gin etiket. Ol d'informoasje stoat op 't ulletje.
+De flesjes en gin etiket. Ol d'informoasje stoat op 't ulletje. Westvleteren is 'n ênigstn trappist woavan da 't officieel Trappist-logo nie op de flesche stoat; 't logo stoat wel op de typische outn bierbakkn.
 * Trappist Westvleteren Blond (5,8%): emakt mi drie sôortn [[ommel]] uit de streke van [[Poperienge]]. 't Bier et e krudig aroma, is lichte van smoake, moa mit e bittere achtersmoake.	't Erkenn an 't groen ulletje.
 * Trappist Westvleteren 8 (8%): e zoete, frutig (meloene) aroma. 't Erkenn an 't blauw ulletje.
 * Trappist Westvleteren 12 (10,8%): 'n zoetsn poater. E romig aroma, en e vulle caramelachtige smoake. 't Erkenn an 't geel ulletje.
