*Empty MediaWiki Message*

--- a/Lodewyk_I.mw
+++ b/Lodewyk_I.mw
@@ -4,7 +4,7 @@
 | functie = [[Groaf van Vloandern]]
 | periode = [[1322]] – [[1346]]
 | vôorganger = [[Robrecht III van Vloandern|Robrecht van Béthune]]
-| ipvolger = [[Margaretha III van Vloandern|Margaretha van Male]]
+| ipvolger = [[Lodewyk van Male]]
 | voader = Lodewyk I van Nevers
 | moeder = Ogiva van Luxemburg
 }}'''Lodewyk I van Vloandern''' (°Névers, round 1304 - † Crécy, [[26 ogustus]] [[1346]]) wos a [[groaf van Vloandern]]. En is oek ekend ounder de noame '''Lodewyk II van Nevers''' of Lodewyk van Crécy.
