--- a/Lodewyk_I.mw
+++ b/Lodewyk_I.mw
@@ -6,7 +6,7 @@
 | vôorganger = [[Robrecht III van Vloandern|Robrecht van Béthune]]
 | ipvolger = [[Lodewyk van Male]]
 | voader = Lodewyk I van Nevers
-| moeder = Ogiva van Luxemburg
+| moeder = Johanna van Rethel
 }}'''Lodewyk I van Vloandern''' (°Névers, round 1304 - † Crécy, [[26 ogustus]] [[1346]]) wos a [[groaf van Vloandern]]. En is oek ekend ounder de noame '''Lodewyk II van Nevers''' of Lodewyk van Crécy.
 
 Zyn voader wos Lodewyk I van Nevers, zyn grôotvoader [[Robrecht III van Vloandern|Robrecht van Béthune]].
