--- a/Zeeki.mw
+++ b/Zeeki.mw
@@ -1,4 +1,4 @@
-{{veranderplat|Mêenn}}
+{{veranderplat|Mêenns}}
 '''Zeeki''' es e festival da goganiseerd es deur 't Sint-Aloysiuscollege in [[Mêenn]]. De êeste ediesje wos in [[2006]] en ip 26 april [[2008]] wordt de twidde ediesje goddn. Tnes es genoemd na nen pizzeria in Gent woarda de êeste plann werdn gemakt vo 't festival tussn [[Wouter Deprez]] en e poar lêroars van 't college. Vo de twidde ediesje willn ze ulder profileern as ''festival van de trotse West-Vloamieng'' as teegnreactie ip de [[NGA]] omda ter voorol West-Vlamsche artiestn ip de scène stoan.
 
 == 2006 ==
