*Empty MediaWiki Message*

--- a/Paul_Boudry.mw
+++ b/Paul_Boudry.mw
@@ -2,7 +2,7 @@
 
 Ie volgde lesse an ‘t Nationaal Hoger Instituut vo Schône Kunstn in Antwerpn en ie schilderde drie joar noa levend model ounder leidienge van [[Isidoor Opsomer]]. ’t Raffinement in z'n werkn et ’n gelêerd van de realistischn schilder [[Walter Vaes]]. Ie bewounderde de Vlamsche blommenschilders uut de 17ste êeuwe en ie bestudeerde groundig under techniek. 
 
-Ie was van de generoatie van [[Jan Cox]], Jack Godderis, René De Coninck, Mark Macken, [[Mark Mendelson]] en [[Leo Van Paemel]].
+Ie was van de generoatie van [[Jan Cox]], Jack Godderis, René De Coninck, [[Mark Macken]], [[Mark Mendelson]] en [[Leo Van Paemel]].
 
 Ie was professor an de Academie vo Schône Kunstn in Berchem. Ie is surtout gekend vo z’n portrettn en z’n styf gedetailleerde blommen.
 
