--- a/Tom_Boonen.mw
+++ b/Tom_Boonen.mw
@@ -15,7 +15,7 @@ Zyn beste joar tout nu toe is zeker 2005, e joar woarin dat 'n nie ollêne de Ro
 ===Klassiekers===
 *1x Weireldkampioen up de weug (2005)
 *2x [[Rounde van Vloandern]] (2005, 2006)
-*1x [[Parys-Roubaix]] (2005)
+*2x [[Parys-Roubaix]] (2005, 2008)
 
 ===Aar grôte koersn===
 *4x [[E3 Prys Vloandern]] (2004, 2005, 2006, 2007)
