--- a/Portoal:Kunst_en_Cultuur.mw
+++ b/Portoal:Kunst_en_Cultuur.mw
@@ -69,7 +69,7 @@ __NOTOC__
 * [[Kunstgeschiedenisse]]: [[:Category: Kunste in den klassiekn tyd|Kunste in den klassiekn tyd]], [[:Category: Pre-istorische kunste|Pre-istorische kunste]]
 * Kunststrômiengn: [[Art Nouveau (Blanknberge)]], [[Latemsche Schole]], [[Vlamsche Primitievn]]
 * Moderne kunste: [[David Černý]],  [[Wim Delvoye]], [[Jan Theuninck]]
-* [[Beeldouwer|Beeldouwkunste]]: [[Madonna met Kind]], [[Guillaume Charlier]], [[Jan Desmarets]], [[Irénée Duriez]], [[George Grard]], [[Jules Lagae]], [[George Minne]]
+* [[Beeldouwer|Beeldouwkunste]]: [[Madonna met Kind]], [[Guillaume Charlier]], [[Jan Desmarets]], [[Irénée Duriez]], [[George Grard]], [[Jules Lagae]], [[Mark Macken]], [[George Minne]]
 * Architectuur: [[Sir Reginald Blomfield]], [[Huib Hoste]]
 ** Islamitische architectuur: [[Alcazaba]]
 * Theoaters en concertgebouwn: [[Concertgebouw (Brugge)]]
