*Empty MediaWiki Message*

--- a/1913.mw
+++ b/1913.mw
@@ -4,6 +4,10 @@
 
 ;ogustus
 *[[10 ogustus|10]] - [[Romain Maes]]
+
+;september
+*[[19 september|19]] - [[Mark Macken]]
+
 [[Categorie:1910-1919]]
 
 [[af:1913]]
