*Empty MediaWiki Message*

--- a/21_oktober.mw
+++ b/21_oktober.mw
@@ -4,6 +4,9 @@
 * [[1920]] - [[Willy Lustenhouwer]]
 * [[1956]] - [[Jessie De Caluwé]]
 
+==Gestorvn==
+* [[1977]] - [[Mark Macken]]
+
 [[Categorie:Datum]]
 
 [[af:21 Oktober]]
