*Empty MediaWiki Message*

--- a/1977.mw
+++ b/1977.mw
@@ -6,6 +6,10 @@
 ;juli
 *[[17 juli|17]] - [[Leif Hoste]]
 
+==Gestorvn==
+;oktober
+*[[21 oktober|21]] - [[Mark Macken]]
+
 [[Categorie: 1970-1979]]
 
 [[af:1977]]
