/* Uutsloagn competitie */  Ploeg van't stad!

--- a/Club_Brugge_KV.mw
+++ b/Club_Brugge_KV.mw
@@ -175,7 +175,8 @@ De vôorbereidienge start traditioneel mè oefnmatchkes teegn ploegn uut loager 
 | 26 || style="text-align:left;" | Club Brugge - '''Racing Genk''' || 2 - 6 || 54 || 3
 |-
 | 27 || style="text-align:left;" | SV Zulte Waregem - '''Club Brugge''' || 2 - 3 || 57 || 3
-
+|-
+| 28 || style="text-align:left;" | '''Club Brugge''' - Cercle Brugge || 1 - 0 || 60 || 3
 |}
 <sup>*</sup>Mats uutgesteld van 't slicht weer
 
