--- a/Portoal:Kunst_en_Cultuur.mw
+++ b/Portoal:Kunst_en_Cultuur.mw
@@ -32,7 +32,7 @@ __NOTOC__
 | width="50%" style="border: 1px solid #BCD2EE; background-color:aliceblue; padding:1em;" valign="top" |
 
 <h3>[[Ofbeeldienge:Nuvola music.svg|40px]] Muzik</h3>
-* '''Componistn''': [[Johann Sebastian Bach]], [[Peter Benoit]], [[Yves Bondue]], [[Cecilia Callebert]], [[Johan De Stoop]], [[François Glorieux]], [[Desire Emile Inghelbrecht]], [[Alfons Mervillie]], [[Herman Roelstraete]]
+* '''Componistn''': [[Johann Sebastian Bach]], [[Peter Benoit]], [[Yves Bondue]], [[Cecilia Callebert]], [[Johan De Stoop]], [[François Glorieux]], [[Desire Emile Inghelbrecht]], [[Alfons Mervillie]], [[Herman Roelstraete]], [[Adriaan Willaert]]
 * '''[[Muziekinstrument]]n''': [[Accordeong]], [[Bandoneong]], [[Concertina]], [[Harmonium]], [[Klarinette]], [[Koperbloazers]], [[Moundmuzik]], [[Orgel]], [[Outbloazers]], [[Strykers]], [[Trekzak]], [[Trompette]] 
 * '''Bouwers va muziekinstrumentn''': [[Piano's Maene]], [[Adolphe Sax]]
 * '''Muziekclubs''': [[Banana Peel]]
