*Empty MediaWiki Message*

--- a/Mark_Macken.mw
+++ b/Mark_Macken.mw
@@ -23,4 +23,4 @@ Macken makte ook ‘t beeld in metoal ''De Veerman'' (1955) dat ip den dyk stoat
 ==Grafmonument==
 Ip ‘t graf van Mark Macken in Antwerpn stoat er een beeld van em. ‘t Grafmonument is een ountwerp van zyn lêerlink Marcel Mazy.
 
-[[Categorie: Beeldouwer| Beeldouwer]]
+[[Categorie: Beeldouwer|Macken, Mark]]
