*Empty MediaWiki Message*

--- a/7_december.mw
+++ b/7_december.mw
@@ -3,6 +3,9 @@
 ==Geboorn==
 * ? - [[Piet Huysentruyt]]
 
+==Gestorvn==
+*[[1562]] - [[Adriaan Willaert]]
+
 [[Categorie:Datum]]
 
 [[af:7 Desember]]
