--- a/Zeruzalemkerke.mw
+++ b/Zeruzalemkerke.mw
@@ -1,6 +1,6 @@
 {{plat|Brugs}}
 
-[[Ofbeeldienge:Zeruzalemkerke.JPG|thumb|left|De Zeruzalemkerke]]
+[[Ofbeeldienge:Zeruzalemkerke.JPG|thumb|right|De Zeruzalemkerke]]
 Eén van de merkweirdigste kerken van [[Brugge]] is de '''Zeruzalemkerke'''.  Z’eet ur definitief uutzicht gekregen tusschen [[1470]] en [[1480]].  Volgens d’overleverienge is ’t 'n woare kopieë van de Illige Grafkerke in Zeruzalem.  De familie Adornes, die uut [[Genua]] kwaamp, eet de kerke gebouwd en ’t was [[Anselmus Adornes]] die in 1470 en ’71 vo 14 moanden in Zeruzalem gewist was die de defnitieve plannen uutgevoerd eet.
 
 De kerke is eigenlik een mausolee geworden vo Anselmus Adornes en z'n vrouwe, Margaretha van der Banck.  Under praalgroaven stoan nog oltyd in ’t midden van de kerke.  Adornes was lid gewist van d’ Orde van de Schotse Eenhoorn en persoanlikkn adviseur van de Schotse keunink James III.  Dorom is ’t mo juste z'n erte die in ze graf in Brugge ligt en de reste van z'n lyf in [[Schotland]].
