--- a/Club_Brugge_KV.mw
+++ b/Club_Brugge_KV.mw
@@ -178,7 +178,7 @@ De vôorbereidienge start traditioneel mè oefnmatchkes teegn ploegn uut loager 
 |-
 | 30 || style="text-align:left;" | '''Club Brugge''' - Cercle Brugge || 1 - 0 || 60 || 3
 |}
-<sup>*</sup>Mats uutgesteld van 't slicht weer
+<sup>*</sup>Mats uutgesteld gewist van 't slicht weer
 
 ===Uutslaagn beker===
 {| border="0" cellpadding="5" cellspacing="0" align="centre" style="border: 1px solid #F6CCDA;background-color:seashell;text-align:center;"
