*Empty MediaWiki Message*

--- a/Mark_Macken.mw
+++ b/Mark_Macken.mw
@@ -20,7 +20,13 @@ Macken makte ook ‘t beeld in metoal ''De Veerman'' (1955) dat ip den dyk stoat
 *1936: Prys Van Lerius
 *1937: Prys De Keyzer
 *1938: Grôte Prys van Rome beeldouwkunste
+
 ==Grafmonument==
 Ip ‘t graf van Mark Macken in Antwerpn stoat er een beeld van em. ‘t Grafmonument is een ountwerp van zyn lêerlink Marcel Mazy.
+
+==Externe koppeliengn==
+*[http://www.schoonselhof.be/macken.html Grafmonument van Mark Macken, Schoonselhof] 
+*[http://academieantwerpen.ha.be/Prijzen/Mark%20Macken.html Academie Antwerpn]
+*[http://www.vitalspirit.be/middelheim.html Beeld "April" in Middelheim]
 
 [[Categorie: Beeldouwer|Macken, Mark]]
