*Empty MediaWiki Message*

--- a/Fransman.mw
+++ b/Fransman.mw
@@ -1,5 +1,6 @@
-Een Fransman is:
+{{dbintro}}
 
-1. un inweuner van Frankrijk.
+* een inweuner van [[Frankryk]]
+* 'ntwien die in de zomer in Frankryk by boern ging werken, bevôorbeeld om tarwe te maain.
 
-2. 'n twie die in 't sezoen (zomer) in Frankrijk bie boern ging werken, bevoerbeeld om tarwe te maain.
+{{db}}
