*Empty MediaWiki Message*

--- a/Parys-Roubaix.mw
+++ b/Parys-Roubaix.mw
@@ -3,13 +3,28 @@
 De bekenste bynoame van Parys-Roubaix is ''d'Elle van 't Nôorn'', e noame die egeevn is deur e journaliest die achtern ôorloge styf ounder 'n indruk wos van olles die in de streke kapot eschootn wos.
 
 ==Bekende kosschieboan==
-* Bus van Wallers-Arenberg (Museeuw ed ier eki erg evolln en ze knieschyve ebrookn)
+* Bus van Wallers-Arenberg (Museeuw ed ier e ki zwoar evolln en zyn knieschyve ebrookn)
 * Carrefour de l'Arbre
 * Mons-en-Pévèle
 * Rue de l'Abattoir (nie de officiële noame, 't zyn twêe stikkn, nie verre van Orchies)
 
-==Mesjeu Parys-Roubaix==
-Tjeetn Devloamienk ([[Roger De Vlaeminck]] officieel) et Parys-Roubaix vier kêers ewonn en ne wos oek vie kirs 'n twin. En ed in 't hêel 14 kêers meiedoan en doavan et 'n moar êne kê moetn upgeevn.
+== Recente winnoars ==
+*[[Parys-Roubaix 2008|2008]] - [[Tom Boonen]] 
+*[[Parys-Roubaix 2007|2007]] - [[Stuart O'Grady]] 
+*[[Parys-Roubaix 2006|2006]] - [[Fabian Cancellara]] 
+*[[Parys-Roubaix 2005|2005]] - Tom Boonen 
+*[[Parys-Roubaix 2004|2004]] - Magnus Bäckstedt
+*[[Parys-Roubaix 2003|2003]] - [[Peter Van Petegem]]  
+*[[Parys-Roubaix 2002|2002]] - Johan Museeuw 
+*[[Parys-Roubaix 2001|2001]] - Servais Knaven
+*[[Parys-Roubaix 2000|2000]] - Johan Museeuw
+*1999 - [[Andrea Tafi]] 
+*1998 - [[Franco Ballerini]] 
+*1997 - [[Frédéric Guesdon]]  
+*1996 - Johan Museeuw
+
+==Monsieur Parys-Roubaix==
+([[Roger De Vlaeminck|Roger - Tjeetn - De Vlaeminck]] et Parys-Roubaix vier kêers ewonn en ne wos ouk vie kirs 'n twin. En ed in 't hêel 14 kêers meiedoan en doavan et 'n moar êne kê moetn upgeevn.
 
 ==West-Vlamsche winnoars==
 *[[Johan Museeuw]] (3x)
