/* Monsieur Parys-Roubaix */

--- a/Parys-Roubaix.mw
+++ b/Parys-Roubaix.mw
@@ -24,7 +24,7 @@ De bekenste bynoame van Parys-Roubaix is ''d'Elle van 't Nôorn'', e noame die e
 *1996 - Johan Museeuw
 
 ==Monsieur Parys-Roubaix==
-([[Roger De Vlaeminck|Roger - Tjeetn - De Vlaeminck]] et Parys-Roubaix vier kêers ewonn en ne wos ouk vie kirs 'n twin. En ed in 't hêel 14 kêers meiedoan en doavan et 'n moar êne kê moetn upgeevn.
+[[Roger De Vlaeminck]] et Parys-Roubaix vier kêers ewonn en ne wos ouk vie kirs 'n twin. En ed in 't hêel 14 kêers meiedoan en doavan et 'n moar êne kê moetn upgeevn.
 
 ==West-Vlamsche winnoars==
 *[[Johan Museeuw]] (3x)
