*Empty MediaWiki Message*

--- a/Parys-Roubaix.mw
+++ b/Parys-Roubaix.mw
@@ -1,9 +1,10 @@
-'''Parys-Roubaix''' (Nederlands: ''Parijs-Roubaix'') is e koerseklassieker in 't nôorn va [[Vrankryk]]. 'n Koers is surtout ekend voe ze vele kosschieboann, tussen Compiègne (woa dat 'n start nu ligt, omda Parys te verre is) en Roubaix (woa dan de koereurs ankomn up de piste).
+'''Parys-Roubaix''' (Nederlands: ''Parijs-Roubaix'') is e [[vélokoerse|koerseklassieker]] in 't nôorn va [[Vrankryk]]. 'n Koers is surtout ekend voe ze vele kosschieboann, tussen Compiègne (woa dat 'n start nu ligt, omda Parys te verre is) en Roubaix (woa dan de koereurs ankomn up de piste).
 
-De bekenste bynoame van Parys-Roubaix is ''d'Elle van 't Nôorn'', e noame die egeevn is deur e journaliest die achtern ôorloge styf ounder 'n indruk wos van olles die in de streke kapot eschootn wos.
+De bekendste bynoame van Parys-Roubaix is ''d'Elle van 't Nôorn'', e noame die egeevn is deur e journaliest die achtern ôorloge styf ounder 'n indruk wos van olles die in de streke kapot eschootn wos.
 
 ==Bekende kosschieboan==
-* Bus van Wallers-Arenberg (Museeuw ed ier e ki zwoar evolln en zyn knieschyve ebrookn)
+De zones mi kosschien krygn sterretjes van d'organisators. Oe mêer sterretjes, oe lastiger de zone. 't Maximum is 5 sterretjes. De zones krygn ouk e nummero: oe dichter by 'n arrivée, oe klinder 'n nummero.
+* Bus van Wallers-Arenberg ([[Johan Museeuw]] et ier e ki zwoar evolln en zyn knieschyve ebrookn)
 * Carrefour de l'Arbre
 * Mons-en-Pévèle
 * Rue de l'Abattoir (nie de officiële noame, 't zyn twêe stikkn, nie verre van Orchies)
@@ -24,7 +25,7 @@ De bekenste bynoame van Parys-Roubaix is ''d'Elle van 't Nôorn'', e noame die e
 *1996 - Johan Museeuw
 
 ==Monsieur Parys-Roubaix==
-[[Roger De Vlaeminck]] et Parys-Roubaix vier kêers ewonn en ne wos ouk vie kirs 'n twin. En ed in 't hêel 14 kêers meiedoan en doavan et 'n moar êne kê moetn upgeevn.
+[[Roger De Vlaeminck]] et Parys-Roubaix vier kêers ewonn en ne wos ouk vie kirs 'n twin. En ed in 't hêel 14 kêers meiedoan en doavan et 'n moar êne kê moetn upgeevn. 
 
 ==West-Vlamsche winnoars==
 *[[Johan Museeuw]] (3x)
