--- a/Parys-Roubaix.mw
+++ b/Parys-Roubaix.mw
@@ -42,7 +42,26 @@ De zones mi kosschien krygn sterretjes van d'organisators. Oe mêer sterretjes, 
 *[[Paul Deman]]
 *[[Cyriel Van Hauwaert]]
 
-== Externe koppelienge ==
-* [http://www.youtube.com/watch?v=rkZBDcmXI-w De zone Arenberg: e filmptje]
+== Externe koppeliengn ==
+*[http://www.letour.fr/2008/PRX/COURSE/fr/index.html Officieeln website (FR)] 
+*[http://www.youtube.com/watch?v=rkZBDcmXI-w De zone Arenberg: e filmptje]
 
 [[Categorie: Fransche wielerkoers]]
+
+[[ca:París-Roubaix]]
+[[da:Paris-Roubaix]]
+[[de:Paris–Roubaix]]
+[[en:Paris-Roubaix]]
+[[es:París-Roubaix]]
+[[fi:Pariisi–Roubaix]]
+[[fr:Paris-Roubaix]]
+[[gl:París-Roubaix]]
+[[he:פריז - רובא]]
+[[it:Parigi-Roubaix]]
+[[ja:パリ〜ルーベ]]
+[[lb:Paris - Roubaix]]
+[[no:Paris–Roubaix]]
+[[pl:Paryż-Roubaix]]
+[[simple:Paris-Roubaix]]
+[[sv:Paris-Roubaix]]
+[[uk:Париж-Рубе]]
