*Empty MediaWiki Message*

--- a/Meroviengers.mw
+++ b/Meroviengers.mw
@@ -1,6 +1,6 @@
 De '''Meroviengers''' woarn een dynastie van [[Frankn|Frankische]] keuniengn die regeerdn van de 5e tout  de 8e eeuwe.
 == Ountstoan ==
-De noame komt van ''Merovech'', de keunienk van de Salische [[Frankn]] die regeerde van 447 tout 457. Zyn klêenzeune [[Clovis I]] verenigde ‘t grotste dêel van Gallië ten noordn van de Loire. Deurda Clovis em in 496 liet doopn wierd ’t christndom ‘t stoatsgelôof van ‘t [[Frankisch Ryk]]. 
+De noame komt van [[Merovech]], de keunienk van de Salische [[Frankn]] die regeerde van 447 tout 457. Zyn klêenzeune [[Clovis I]] verenigde ‘t grotste dêel van Gallië ten noordn van de Loire. Deurda Clovis em in 496 liet doopn wierd ’t christndom ‘t stoatsgelôof van ‘t [[Frankisch Ryk]]. 
 
 Teegn de 7e eeuwe begost de periode van de [[Hofmeier]]s. De Merovingische keuningn trokkn under niks mêer an van ‘t feitelikke regeern en z'aan e luxeleevn. ’t Enigste dan ze nog mostn doen was nu en ton under andteekn zettn. Doarom kreegn de Merovingische keuningn van de periode van de Hofmeiers (634 -751) de benoaminge van ''Vadsige keuningn'' (''les rois fainéants''). 
 
@@ -22,7 +22,7 @@ De Hofmeiers krêegn mêer en mêer te zeggn en uuteindelik pakte Pepeyn den Kor
 *Fransche Revolutîe:1789
 
 == Lyste van de Meroviengische keuniengn ==
-*447 - 458: Merovech 
+*447 - 458: [[Merovech]] 
 *458 - 482: Childerik I
 *482 - 511: [[Clovis I]]
 *511 - 558: Childebert I
