--- a/Mussel.mw
+++ b/Mussel.mw
@@ -30,7 +30,7 @@ Ofbeeldienge:Moules Miesmuscheln mussel3.jpg|De schelpe van e mussel
 </gallery>
 {{Commons|Mytilus edulis}}
 
-[[Categorie:Mytiloida]]
+[[Categorie:Mytilidae]]
 
 [[da:Blåmusling]]
 [[de:Miesmuscheln]]
