*Empty MediaWiki Message*

--- a/Merovech.mw
+++ b/Merovech.mw
@@ -8,6 +8,10 @@ Merovech wierd ipgevolgd deur z’n zeune Childerik I.
 De betekenisse van ’t Oud-Germoans woord ''vech'' (''wīg''), in  de Frankische noamn Mero-vech en Chlodo-vech (Clovis), zou ''vechter'' zyn. Merovech:  (''māri''+ ''wīg'') ''vermoarde vechter'', en Chlodovech: (''Chlod'' = gloed) ''glorieuze vechter''. 
 
 ’t Element ’Mero’ zoudt ôok van d’Ollandsche riviere ''Merwede'' kunn kommn of van ’t Latyn ''Mare'' (zêe). 
+
+[[Categorie:Keunienk der Frankn]]
+[[Categorie:Merovienger]]
+
 [[af:Merovech]]
 [[ar:ميروفيوس]]
 [[bg:Меровех]]
