--- a/Provincieroadsverkiezingn_2006.mw
+++ b/Provincieroadsverkiezingn_2006.mw
@@ -1,4 +1,4 @@
-De '''provincieroadsverkiezingn''' vollen mêestol tôope me de [[gemêenteroadsverkiezingn 2006|gemêenteroadsverkiezingn]]. De verkiezingn in 2006 gingn deur ip 8 oktober. De tendensen in [[West-Vloandern]] woaren dezelfde lik in de reste van [[België]]:
+De '''provincieroadsverkiezingn''' vollen mêestol tôpe me de [[gemêenteroadsverkiezingn 2006|gemêenteroadsverkiezingn]]. De verkiezingn in 2006 gingn deur ip 8 oktober. De tendensen in [[West-Vloandern]] woaren dezelfde lik in de reste van [[België]]:
 
 * Het kartel [[CD&V]]-[[N-VA]] woun fors: +4%
 * Het [[Vlaams Belang]] brak deure ip het platteland en kende de grôotste winste: +6.8%
