/* Wuk es 't er te ziene */

--- a/Middelkerke.mw
+++ b/Middelkerke.mw
@@ -91,7 +91,7 @@ Sichtend de fuusjes strekt de gemêente Middelkerke em uut toet bykan tien kilom
 
 ==Wuk es 't er te ziene==
 * De stanbêelden van verschillige [[stripfiguur|stripfiguren]] lik [[Jommeke]], [[Suske en Wiske]], [[Lucky Luke]], [[Kiekeboe]], [[Nero]], ...
-* De drounknput: e drinkwoaterreservoir die hêel skuns es kommn te liggn
+* De droenkepit: e drinkwoaterreservoir die hêel skuns es kommn te liggn
 
 {{GemêentnWVL}}
 [[Categorie:Plekke in West-Vloandern]]
