--- a/Langemark.mw
+++ b/Langemark.mw
@@ -14,11 +14,11 @@
 |datum=31/12/2006
 |dichtheid=162
 |postcode=8920
-|}}'''Langemark''' is e prochie in West-Vloandern. 't Bestoat ol siens oungeveer 450 n.C. 't Is altyd e klêen centrum in de [[Westoek]] gebleevn. In de dorpskerne weunn der oungeveer 3.500 inweuners. Binn Langemark liggn der nog twêe parochies: de [[Madône (Langemark)|Madône]] en [[Sint-Julies]]. 
+|}}'''Langemark''' is e prochie in West-Vloandern. 't Bestoat ol siens oungeveer 450 n.C. 't Is altyd e klêen centrum in de [[Westoek]] gebleevn. In de dorpskerne weunn der oungeveer 3 500 inweuners. Binn Langemark liggn der nog twêe parochies: de [[Madône (Langemark)|Madône]] en [[Sint-Julies]]. 
 In 1971 fusioneerde Langemark met [[Bikschôte]] en in 1977 met [[Poekapelle]], en achter veel protest van de Poekapellenoars en ze de nieuwe gemeente uuteindelik [[Langemark-Poelkapelle]] genoemd.
 
 ==Algemêen==
-De 65 meiters oge torre van de Sint-Pauluskerke komt goed uut up 't marktplinsje met oge platanenboomn, waarround de stroatn nog ossa met kasitsesteen zijn angeleid. Idre woensdagvornoene is 't er ier nog markt.
+De 65 meiters oge torre van de Sint-Pauluskerke komt goed uut up 't marktplingsje met oge platoaneboomn, waarround de stroatn nog ossa met kasitsesteen zijn angeleid. Idre woensdagvornoene is 't er ier nog markt.
 
 Vroeger ad Langemark een buurtspoorweg verbindienge met [[Roeseloare]] en lag het op de spoorverbindinge tussen [[Ostende (stad)|Ostende]] en Armentières, op spoorlijne 63 tussen [[Yper]] en [[Toeroet]]. De statie is tot op heden gebrukt als kazerne van de pompiers, mo achter de bouw van een nieuwe kazerne in 2006 kommet het waarschienlyk leeg te stoan.
 
@@ -27,15 +27,15 @@ Langemark is ook de Baeckelandt-prochie. Iddere drie joar viert men ier de Baeck
 Langemark et ook een bekend jeugduus: De Flodder.
 
 ==Oorlogsgeschiedenisse==
-[[Image:Langemark massgrave.jpg|thumb|left|Massagraf ip 't ''soldatenfriedhof''.  Hierin liggen 24.917 Duutsche soldoatn woavan dat er 7977 ounbekend zyn.]]
-[[Ofbeeldienge:Soldatenfriedhoflangemark.jpg|thumb|E dêel van 't ''soldatenfriedhof''.  Ounder en tusschen de wortels van de eikebôomn, liggen der  10.143 soldoatn woavan dat er van 3.836 under ne noame nie gekend es]]
-By de meeste menschn stoat Langemark meest bekend voe zi Duutsche Militaire Begroafplekke, 't Studentenkerkof ut 'n [[Êeste Weireldoorloge]]. Ip 't ''soldatenfriedhof'' liggn der mêer of 44.000 Duutsche soldoatn.
+[[Image:Langemark massgrave.jpg|thumb|left|Massagraf ip 't ''soldatenfriedhof''.  Hierin liggen 24 917 Duutsche soldoatn woavan dat er 7977 ounbekend zyn.]]
+[[Ofbeeldienge:Soldatenfriedhoflangemark.jpg|thumb|E dêel van 't ''soldatenfriedhof''.  Ounder en tusschen de wortels van de eikebôomn, liggen der 10 143 soldoatn woavan dat er van 3 836 under ne noame nie gekend es]]
+By de meeste menschn stoat Langemark meest bekend voe zy Duutsche Militaire Begroafplekke, 't Studentekerkof ut 'n [[Êeste Weireldoorloge]]. Ip 't ''soldatenfriedhof'' liggn der mêer of 44 000 Duutsche soldoatn.
 
-In dien oorloge ad Langemark zwoar te lieden, 't lag namelijk pal op de frountlinne. 't Bleeft der nietn overynd stoan.
+In dien oorloge ad Langemark zwoar te lydn, 't lag noamelik juuste op de frountlyne. 't Bleeft der nietn overynd stoan.
 
-Oeder de schriefwieze ''Langemarck'' is 't dorp voorol gekend in de Fransche, Iengelsche e Duutsche krigsgeschiedenisse vanwege de veldslaagn in november 1914. In [[Duutsland]] ountstound een ware mythe round 't woord ''Langemark'' achter volsche zegebulletins van het leger over heldhaftige gevichten van jounge Duutsche soldoatn. De gevichten adn eerder plekkegevoundn tussen [[Nôordschote]] en [[Bikschôte]] mo Langemark was gekoozn omdat et zo Duuts klounk. In de Duutsche schooln werdn de heldn van Langemark vereird, en er werdn gedinkdagen geoeden en monumentn opgericht. [[Hitler]], die nog by Yper gestationeerd gewist wos, nam deze heldenvereringe over en noemde zizelvn ook een Langemarck-stridder. Loater werd het Vlamsch Legioen als  [[6de SS-Stormbrigade Langemarck|stormdevisie Langemarck]] an 't oostfrount ingezet.
+Ounder de schryfwyze ''Langemarck'' is 't dorp voorol gekend in de Fransche, Iengelsche e Duutsche krygsgeschiedenisse deur de veldsloagn in november 1914. In [[Duutsland]] ountstound e woare mythe round 't woord ''Langemark'' achter volsche zegebulletins van het leger over heldhaftige gevichten van jounge Duutsche soldoatn. De gevichten addn idder plekke gevoundn tussen [[Nôordschote]] en [[Bikschôte]] mo Langemark was gekoozn omdat et zo Duuts klounk. In de Duutsche schooln werdn d'eldn van Langemark vereird, en er werdn gedinkdagen geoeden en monumentn opgericht. [[Hitler]], die nog by Yper gestationeerd gewist wos, nam deze heldenvereringe over en noemde zyzelvn ook een Langemarck-stridder. Loater werd het Vlamsch Legioen als  [[6de SS-Stormbrigade Langemarck|stormdevisie Langemarck]] an 't oostfrount ingezet.
 
-Op 22 april 2005 wost precis 90 joar geleedn dat in die gemeente, en da voe d'iste kêe in de weereldgeschiednisse, op grote schale een chemikn aanvol wos uitgevoerd. De Duutschers gebruktn chloorgoaze dat met de wind mee gink in de richtinge van de geallieerde troepn. Verrast deur 't succes greepn de Duutschers echter nie de kansse om deure te stoten en zo Yper in te nimn.
+Op 22 april 2005 wos 't juuste 90 joar geleedn dat in die gemeente, en da voe d'iste kêe in de weereldgeschiednisse, op grote schale een chemikn aanvol wos uitgevoerd. De Duutschers gebruktn chloorgoaze dat met de wind mee gink in de richtinge van de geallieerde troepn. Verrast deur 't succes greepn de Duutschers echter nie de kansse om deure te stoten en zo Yper in te nimn.
 
 [[Categorie:Langemark-Poelkapelle]]
 [[Categorie: Plekke in West-Vloandern]]
