*Empty MediaWiki Message*

--- a/Langemark.mw
+++ b/Langemark.mw
@@ -40,4 +40,7 @@ Op 22 april 2005 wos 't juuste 90 joar geleedn dat in die gemeente, en da voe d'
 [[Categorie:Langemark-Poelkapelle]]
 [[Categorie: Plekke in West-Vloandern]]
 
+[[de:Langemark]]
+[[en:Langemark]]
 [[nl:Langemark]]
+[[sv:Langemark]]
