--- a/Walter_Arfeuille.mw
+++ b/Walter_Arfeuille.mw
@@ -1,14 +1,14 @@
-'''Walter Arfeuille''' (°1952(?)) is e stuntman uut [[Vloamertienge]] die ol vele keirs in 't Guinness Book of Records is ekommn.  
+{{plat|Ypers}}'''Walter Arfeuille''' (°1952(?)) is e stuntman uut [[Vloamertienge]] die ol vele keirs in 't Guinness Book of Records is ekommn.  
 Zyn bynoame is ''De Bêeste''. Arfeuille is surtout bekend van zyn stunts mi zyn tans. 
 
 == Carrière als stuntman ==
-Arfeuille is de jougsn van vuve. Op 't schole dei 'n outbewerkieng en e kwam bouwvakker. Round zyn 13 joar wos 'n gewoare dat 'n vele macht adde. Van toun vodders is 'n begunn train mi gewichtn, in de garage van 't ouderlik uus. Achter e poar joar wos 'n Belgs kampioen 'powerlifting'. 
+Arfeuille is de jougsn van vuve. Up 't schole dei 'n outbewerkieng en e gienk in 'n bouw. Round zyn dertiene wos 'n gewoare dat 'n vele macht adde. Van toun vors is 'n begunn enterneern me gewichtn, in de garage van 't uus van zyn ouders. Achter e poar joar wos 'n Belgs kampioen 'powerlifting'. 
 
-Op zyn 25-26 begost 'n mi stunts in 't oopnboar. Ol met e ki krêeg John Massis uut Ôost-Vloandern, die toun bekend stoeg lik 'n grotsn stuntman van [[Belgie]], zwoare concurrensje. Walter Arfeuille sloat vuufdumers deur dikke planks mi zyn blôot ands. In 1990 trok 'n mi zyn tans 271,5 kilo 17 cm van de ground: dat wos toen e weireldrecor. 
-Moa de grotsn stunt van Arfeuille wos op 9 juni 1996 in [[Diksmude]]: e trok e tring van mêer of 223 ton 3,2 meters vôors mi zyn tans.
+Up zyn 25-26 begost 'n mi stunts in 't oopnboar. Ol met e ki krêeg John Massis uut [[Ôost-Vloandern]], die toune bekend stoeg lik 'n grotsn stuntman van [[Belgie]], zwoare concurrensje. Walter Arfeuille sloat vuufdumers deur dikke planks mi zyn blôot andn. In 1990 trok 'n mi zyn tans 271,5 kilo 17 cm van de ground: dat wos toune e weireldrecor. 
+Moa de grotsn stunt van Arfeuille wos up 9 juni 1996 in [[Diksmude]]: e trok e tring van mêer of 223 ton 3,2 meters vôort mi zyn tans.
 
 == Gerechtelikke probleemn ==
-In 2001 kwam Arfeuille op e kwoalikke maniere in 't nieuws. De Correctioneeln Rechtbank van [[Yper]] verôordeelde nem tout 4 joar bak woavan 2 joar vôorwoardelik, omda 'n eroïne edeald adde in zyn fitnesscentrum. Arfeuille gounk ni in beroep en wos content da 'n teegn de lampe eloopn adde. Zyn standbeeld da ze giengn zettn an 't cultureel centrum in Vloamertienge goat er verzekers nu ni mi van kommn.
+In 2001 kwam Arfeuille up e kwoalikke maniere in 't nieuws. De Correctioneeln Rechtbank van [[Yper]] verôordeelde nem tout 4 joar bak woavan 2 joar vôorwoardelik, omda 'n eroïne edeald adde in zyn fitnesscentrum. Arfeuille gounk ni in beroep en wos content da 'n estekt wos. Zyn standbeeld da ze giengn zettn an 't cultureel centrum in Vloamertienge goat er verzekers nu ni mi van kommn.
 
 == Bronn ==
 * Gazet van Antwerpen, 31 mei 2001
