*Empty MediaWiki Message*

--- a/Poekapelle.mw
+++ b/Poekapelle.mw
@@ -15,7 +15,12 @@
 |dichtheid=134
 |postcode=8920
 |}}
-'''Poekapelle''' (officiële noame: ''Poelkapelle'')is e dêelgemêente van de gemêente [[Langemark-Poelkapelle|Langemark-Poekapelle]] en dadde sedert 1977. Achter vele zoagieng is de gemêentenoame toene veranderd in Langemark-Poekapelle in te plekke van [[Langemark]]. 't Weun e klêne 2000 menschn.
+'''Poekapelle''' (officiële noame: ''Poelkapelle'')is e dêelgemêente van de gemêente [[Langemark-Poelkapelle|Langemark-Poekapelle]] en dadde sedert 1977. Achter vele zoagieng is de gemêentenoame toune veranderd in Langemark-Poekapelle in te plekke van [[Langemark]]. 't Weunn e klêne 2000 menschn.
+
+Up 't round punt up de platse stoat er e monument voun Guynemer, e gevechtspiloot uut 'n [[Êestn Weireldôorloge]].
+
+== Bekende Poekapellenoars ==
+*[[Frederik Deburghgraeve]]: Olympisch zwemkampioen schoolslag
 
 {{beg}}
 
