--- a/Langemark.mw
+++ b/Langemark.mw
@@ -35,7 +35,10 @@ In dien oorloge ad Langemark zwoar te lydn, 't lag noamelik juuste op de frountl
 
 Ounder de schryfwyze ''Langemarck'' is 't dorp voorol gekend in de Fransche, Iengelsche e Duutsche krygsgeschiedenisse deur de veldsloagn in november 1914. In [[Duutsland]] ountstound e woare mythe round 't woord ''Langemark'' achter volsche zegebulletins van het leger over heldhaftige gevichten van jounge Duutsche soldoatn. De gevichten addn idder plekke gevoundn tussen [[Nôordschote]] en [[Bikschôte]] mo Langemark was gekoozn omdat et zo Duuts klounk. In de Duutsche schooln werdn d'eldn van Langemark vereird, en er werdn gedinkdagen geoeden en monumentn opgericht. [[Hitler]], die nog by Yper gestationeerd gewist wos, nam deze heldenvereringe over en noemde zyzelvn ook een Langemarck-stridder. Loater werd het Vlamsch Legioen als  [[6de SS-Stormbrigade Langemarck|stormdevisie Langemarck]] an 't oostfrount ingezet.
 
-Op 22 april 2005 wos 't juuste 90 joar geleedn dat in die gemeente, en da voe d'iste kêe in de weereldgeschiednisse, op grote schale een chemikn aanvol wos uitgevoerd. De Duutschers gebruktn chloorgoaze dat met de wind mee gink in de richtinge van de geallieerde troepn. Verrast deur 't succes greepn de Duutschers echter nie de kansse om deure te stoten en zo Yper in te nimn.
+Op 22 april 2005 wos 't juuste 90 joar geleedn dat in die gemeente, en da voe d'iste kêe in de weereldgeschiednisse, op grote schale een chemikn aanvol wos uitgevoerd. De Duutschers gebruktn chloorgoaze dat met de wind mee gink in de richtinge van de geallieerde troepn. Verrast deur 't succes greepn de Duutschers echter nie de kanse voun deure te stoten en zo Yper in te neemn.
+
+== Bekende Langemarknoars ==
+*[[Johan Vermeersch]]: vôorzitter van FC Brussels
 
 [[Categorie:Langemark-Poelkapelle]]
 [[Categorie: Plekke in West-Vloandern]]
