--- a/Zunnebeke.mw
+++ b/Zunnebeke.mw
@@ -68,6 +68,9 @@
 *[[Tyne Cot cemetery]]
 *[[Nunnebuschn]]
 
+== Bekende Zunnebeeknoars ==
+*Tom Coghe: gitarist van [[Goose]]
+
 ==Extern koppelienge==
 *[http://www.zonnebeke.be Website va de gemêente]
 
