*Empty MediaWiki Message*

--- a/Frederik_Deburghgraeve.mw
+++ b/Frederik_Deburghgraeve.mw
@@ -1,10 +1,10 @@
 {{veranderplat|Roeseloars}}
 
-'''Frederik (''Fredje'') Deburghgraeve''' (°[[1 juni]] [[1973]], [[Roeseloare]]) is den bestn zwemmer da me ôoit in [[België]] ein g'ed, dus zekers in [[West-Vloandern]]. J'es geboorn en ipgegroeid in [[Roeseloare]]. Zyn specialiteit is schoolslag. Zyn ôogtepunt is de goudn medaille in Atlanta in '96. Z'n trainer was ton den Ollander Ronald Gaastra.
+'''Frederik (''Fredje'') Deburghgraeve''' (°[[1 juni]] [[1973]], [[Roeseloare]]) is den bestn zwemmer da me ôoit in [[België]] ein g'ed, dus zekers in [[West-Vloandern]]. J'es geboorn en ipgegroeid in [[Roeseloare]]. Zyn specialiteit is schoolslag, de discipline woarin dat 'n up de 100 meiter de goudn medaille won in Atlanta in '96. Z'n trainer was toune den Ollander Ronald Gaastra.
 
 Me zwemmn es ter nie vele geld te verdienn, daarom verkôopt ie nu schoenn.
 
-J'es wok nog en ende gemêenteroadslid gewist van [[Poelkapelle]], de gemêente woa dat'n nu weunt.
+J'es wok nog en ende gemêenteroadslid gewist van [[Poelkapelle]], de gemêente woa dat 'n nu weunt.
 
 == Ôogtepuntn ==
 * 1995 Europees kampioen 100m schoolslag in Weenn
