--- a/Walter_Arfeuille.mw
+++ b/Walter_Arfeuille.mw
@@ -2,7 +2,7 @@
 Zyn bynoame is ''De Bêeste''. Arfeuille is surtout bekend van zyn stunts mi zyn tans. 
 
 == Carrière als stuntman ==
-Arfeuille is de jougsn van vuve. Up 't schole dei 'n outbewerkieng en e gienk in 'n bouw. Round zyn dertiene wos 'n gewoare dat 'n vele macht adde. Van toun vors is 'n begunn enterneern me gewichtn, in de garage van 't uus van zyn ouders. Achter e poar joar wos 'n Belgs kampioen 'powerlifting'. 
+Arfeuille is de jougsn van vuve. Up 't schole dei 'n outbewerkieng en e gienk in 'n bouw. Round zyn dertiene wos 'n gewoare dat 'n vele macht adde. Van toun vors is 'n begunn entreneern me gewichtn, in de garage van 't uus van zyn ouders. Achter e poar joar wos 'n Belgs kampioen 'powerlifting'. 
 
 Up zyn 25-26 begost 'n mi stunts in 't oopnboar. Ol met e ki krêeg John Massis uut [[Ôost-Vloandern]], die toune bekend stoeg lik 'n grotsn stuntman van [[Belgie]], zwoare concurrensje. Walter Arfeuille sloat vuufdumers deur dikke planks mi zyn blôot andn. In 1990 trok 'n mi zyn tans 271,5 kilo 17 cm van de ground: dat wos toune e weireldrecor. 
 Moa de grotsn stunt van Arfeuille wos up 9 juni 1996 in [[Diksmude]]: e trok e tring van mêer of 223 ton 3,2 meters vôort mi zyn tans.
