*Empty MediaWiki Message*

--- a/Seenappel.mw
+++ b/Seenappel.mw
@@ -1,6 +1,9 @@
-Ne '''seenappel''' of ne '''ginappel''' (''[[Kortryk]]'') is de [[vruchte]] van de seenappelboom (''Citrus sinensis''). 
+{{beg}}
+[[Ofbeeldienge:OrangeBloss wb.jpg|thumb|right|200px|Ne seenappelboom in bloeie]]Ne '''seenappel''' of ne '''ginappel''' (''[[Kortryk]]'') is de [[vruchte]] van de seenappelboom (''Citrus sinensis''). 
 
-At de seenappel nog nie rype is, is 't 'n [[groene]]. Achter een endje wordt 'n ton [[oranje]]. 't Vruchtvlees is licht oranjegeel van kleur, en smakt fris. Seenappels wordn azo ipgeetn, of wordt uutgeperst voe [[seenappelsap]] van te moakn.
+At de seenappel nog nie rype is, is 't 'n [[groene]]. Achter een endje wordt 'n ton [[oranje]]. 't Vruchtvlees is licht oranjegeel van kleur en smakt fris. Seenappels wordn azo ipgeetn of wordn uutgeperst voe [[seenappelsap]] van te moakn. Seenappel uut de troopn kommn nôois oranje omdan der doavôorn koele nachtn nôdig zyn, etwot die in Spanje wel gebeurt.
+
+'t Zyn nog e masse aar sôort seenappels, lik de zeurn seenappel en de wynoraje. 
 
 ==Noame==
 De noame komt van Sina ([[China]]) en appel.
