--- a/Kôornsaloa.mw
+++ b/Kôornsaloa.mw
@@ -9,3 +9,14 @@ Kôornsaloa ku toet 25 cm oge kommn. Z'is ossan groene va kleur en ze groeit sur
 De gekwikte versche is mêestol in reekn ezet die stief noare van makoar stoan. 't Zyn êenjoarige plantn die nie goed teegn de koude kunn (byn 5 groadn ounder nul vriezn ze dôod). Kôornsaloa is oftewel rauwe oftewel estoofd eetn. 
 
 't Zittn e masse vitamienn en mineroaln in kôornsaloa (vele mêer of in geweune saloa), oundermêer vitamine C, E, B6 en B9, beta-caroteen en omega-3-vetzeurn.
+
+[[ca:Canonge]]
+[[de:Gewöhnlicher Feldsalat]]
+[[es:Valerianella locusta]]
+[[fr:Mâche]]
+[[hr:Matovilac]]
+[[nl:Veldsla]]
+[[ja:ノヂシャ]]
+[[oc:Valerianella locusta]]
+[[pl:Roszponka warzywna]]
+[[vec:Valerianella locusta]]
