--- a/Annelies_Cappaert.mw
+++ b/Annelies_Cappaert.mw
@@ -1,4 +1,4 @@
-'''Annelies Cappaert''' ([[Brugge]], [[10 september]] [[1979]]) is e [[zanger|zangeresse]]. 
+{{beg}}'''Annelies Cappaert''' ([[Brugge]], [[10 september]] [[1979]]) is e [[zanger|zangeresse]]. 
 
 Ze eit 1 broere (Wouter) en 2 zusters ([[Sarah Cappaert|Sarah]] en Sofie). In 2004 nam ze dêel an [[Idool]] en ze endigde 10de. In 2005 dee ze soamn me eur zuster mee mè [[X-factor]] woar da ze twêede endigden. Sedert ton vormt ze soamn mè eur zuster et duo ''Cappaert Sisters''. 
 
