--- a/Yzer_(riviere).mw
+++ b/Yzer_(riviere).mw
@@ -3,14 +3,14 @@
 |-
 |[[Ofbeeldienge:Sint-Joris - Spaarbekken 3.jpg|thumb|Spoarbekken in [[Sint-Joris]], [[Nieuwpôort]]]]
 |-
-|[[Ofbeeldienge:Nieuwpoort - Yser 1.jpg|thumb|Hoavengeule van d'Yzermoundienge in Nieuwpôort]]
+|[[Ofbeeldienge:Nieuwpoort - Yser 1.jpg|thumb|Oavngeule van d'Yzermoundienge in Nieuwpôort]]
 |-
 |}
-Den '''Yzer''' is êen van de drie [[riviere|strôomn]] in [[België]]. Den Yzer begunt in [[Vrankryk]] ten westn van [[Kassel]]. J'es 78 kilomeiters lank, en doavan lôopn der 45 deur [[West-Vloandern]] (e komt de provinsje binn in [[Roesbrugge]]). Den Yzer lôopt ounder andre deur [[Diksmude]] en komt uut in de [[Nôordzêe]] in [[Nieuwpôort]]. 
+Den '''Yzer''' is êen van de drie [[riviere|strôomn]] in [[België]]. Den Yzer begunt in [[Vrankryk]] ten westn van [[Kassel]]. J'es 78 kilomeiters lank en doavan lôopn der 45 deur [[West-Vloandern]] (e komt de provinsje binn in [[Roesbrugge]]). Den Yzer lôopt ounder andre deur [[Diksmude]] en komt uut in de [[Nôordzêe]] in [[Nieuwpôort]]. 
 
-J'et e belangryke rolle gespeeld in den [[Êeste Weireldoorloge]]. De Duutschers wern gestopt in under ipmars omda de valleie van 'n Yzer ounder [[woater]] was gezet deur [[Karel Cogge]].  Den [[Yzertôorn]] in [[Diksmude]] herinnert an de rolle van de Yzer beist 'n oorloge.
+J'et e belangryke rolle gespeeld in den [[Êeste Weireldoorloge]]. De Duutschers wern gestopt in under ipmars omda de valleie van 'n Yzer ounder [[woater]] was gezet deur [[Karel Cogge]].  Den [[Yzertôorn]] in Diksmude erinnert an de rolle van de Yzer beist 'n oorloge.
 
-De noame ''[[Bachtn de Kupe]]'', verwyst noa de vallei van den Yser (de ''kupe'').  ''Bachtn de kupe'' is dus olles dat bachtn den Yser ligt (gezien van buutn de Westoek).
+De noame ''[[Bachtn de Kupe]]'', verwyst noa de valleie va 'n Yser (de ''kupe''). ''Bachtn de Kupe'' is dus olles da bachtn den Yser ligt (gezien van buutn de Westoek).
 
 [[Categorie:Riviere in België]]
 
