--- a/Bakkn.mw
+++ b/Bakkn.mw
@@ -1,3 +1,4 @@
+[[Image:Baby foot artlibre jnl.jpg|thumb]]
 '''Bakkn''' es ne toafelsport die je me twêe kunt spelen. 't Trekt ip [[voetbol]], mo ton in 't klêne. 't Es ne redelik populairen cafésport, tope met [[snooker]], [[manilln]] en [[veugelpyk]].
 
 Den toafel bestoat uut nen houtne bak ip pôotn.  Ie trekt ip e klêen voetbolveld en oe weerskantn zittn der goaten in de zykantn woarin dat er yzerne stoavn zittn me vintjes an.
