*Empty MediaWiki Message*

--- a/Kortndrank.mw
+++ b/Kortndrank.mw
@@ -1,3 +1,4 @@
+[[Ofbeeldienge:Alkoholika.jpg|thumb|Kortndrank]]
 '''Kortndrank''' es nen [[drank]] woarin dat er mêer dan twêeëntwintig groadn [[alcol]] zit.
 't Es 't resultoat van de distilloatie of '''t stoken'' van wyn of en ander gegiste of gefermenteerde vloeistoffe in nen alambic of distilleerketel. De mêest bekende kortndrankn zyn geniver, gin, whisky, cognac, vodka en rum.  
 
@@ -16,3 +17,22 @@ Er zyn gevallen bekend van koebêesten die styf zêre stekevet kwoamen omda ze d
 Van den illegoalen alcol wirden er ôok likeuren gemakt me essences da je by den specialist in hobby brouwen kunt kôpen. By ous es den avokoat populair, gemakt van eiers, suker en alcol. Nateurlik goan ze zeggen da ze den alcol by den apoteker gekocht ein.
 
 [[Categorie:drank]]
+
+[[cs:Pálenka]]
+[[de:Spirituosen]]
+[[en:Distilled beverage]]
+[[es:Bebida destilada]]
+[[fi:Viina]]
+[[fr:Spiritueux]]
+[[it:Acquavite]]
+[[ja:蒸留酒]]
+[[ksh:Schabau (Üvversich)]]
+[[la:Distillatio alcoholis]]
+[[nl:Sterkedrank]]
+[[nn:Brennevin]]
+[[no:Brennevin]]
+[[pt:Bebida destilada]]
+[[qu:Hayaq yaku]]
+[[ru:Крепкие спиртные напитки]]
+[[sv:Brännvin]]
+[[zh:烈酒]]
