--- a/Bakkn.mw
+++ b/Bakkn.mw
@@ -1,10 +1,9 @@
 [[Image:Baby foot artlibre jnl.jpg|thumb]]
 '''Bakkn''' es ne toafelsport die je me twêe kunt spelen. 't Trekt ip [[voetbol]], mo ton in 't klêne. 't Es ne redelik populairen cafésport, tope met [[snooker]], [[manilln]] en [[veugelpyk]].
 
-Den toafel bestoat uut nen houtne bak ip pôotn.  Ie trekt ip e klêen voetbolveld en oe weerskantn zittn der goaten in de zykantn woarin dat er yzerne stoavn zittn me vintjes an.
-Zudder stellen de voetbolspelers vôorn. Ge kunt ze noa voorn en noar achtern loatn beweegn door an de stoavn te droaien.
+Den toafel bestoat uut nen outne bak ip pôotn.  Ie trekt ip e klêen voetbolveld en oe weerskantn zittn der goaten in de zykantn woarin dat er yzerne boarn zittn me vintjes an. Zyder stelln de voetbolspelers vôorn (1 keeper, 2 verdedigers, 5 middnvelders en 2 anvollers). Ge kunt ze noa voorn en noar achtern loatn beweegn door an de boarn te droaien en upzyds deur der an te trekkn of te duuwn.
 
-Juuste glik in echtn voetbol es 't er oe weerskantn e golle, woarin da je moe probeern den bol te krygen door an de stoaven an joene kant te droaien.  d'Echte liefebbers loatn de stoaven nôoisn zot droain - ze lossn de grepe ni.
+Juuste glik in echtn voetbol es 't er oe weerskantn e golle, woarin da je moe probeern den bol te krygn deur an de boarn an joune kant te droaien. D'echte liefebbers loatn de boarn nôoisn zot droain - ze lossn de grepe ni. Goals moakn me je vintjes van 't middn, meugt nie.
 
 [[Categorie:Cafésport]]
 
