*Empty MediaWiki Message*

--- a/Ôostrôzebeke.mw
+++ b/Ôostrôzebeke.mw
@@ -33,8 +33,8 @@
 |datum3=01/07/2005
 |datum4=01/01/2006
 |}}
-'''Ôostrôzebeke''' ([[Nederlands]]: ''Oostrozebeke'') is e platske in de provincie [[West-Vloandern]]. Op zijn ippervlakte (16,7 vierkante km) weun d'er 7.500 minsn.
-Ôostrôozebeke ligt tussen [[Iengelmunstr]], [[Ulste]], [[Ôoigem]], [[Wielsbeke]], [[Dentergem]] en [[Meulebeke|Mullebeke]].
+'''Ôostrôzebeke''' ([[Nederlands]]: ''Oostrozebeke'') is e gemêente in de provincie [[West-Vloandern]]. Ip zyn ippervlakte (16,7 vierkante km) weunn d'er 7.500 minsn.
+Ôostrôzebeke ligt tussn [[Iengelmunstr]], [[Ulste]], [[Ôoigem]], [[Wielsbeke]], [[Dentergem]] en [[Meulebeke|Mullebeke]].
 
 ==Attrakties==
 *Jeugduus 't Ipperste
