--- a/Stad.mw
+++ b/Stad.mw
@@ -1,4 +1,63 @@
 E '''stad''' of een '''stee''' is e plekke woa dat er [[mens]]chn weunn. Steedn zyn mêestol grote dichtbebouwde plekkn, die 'n invloed en antrekkienge en ip de omliggnde gebiedn. In [[België]] zyn steedn [[gemêente|gemêentn]] die de noame "stad" als titel kunn droagn.
+
+==Steedn in West-Vloandern==
+In West-Vloandern zyn der 22 steedn (in heel [[Belgie]] 133), woavan de Brugge 't mêeste iweuners et (bykan 120 000) en Mêesn 't minste (round de 1000)).
+
+<small>Inweunersantalln van 2006</small>
+{| class="prettytable sortable" style="font-size:85%"
+! '''Stad'''
+! '''Arrondissement'''
+! '''Inweuners'''
+! '''Joar Keunienklik Besluut'''
+! '''Joar Stadsrechten'''
+|-
+| [[Blanknberge]] ||[[Arrondissement Brugge|Brugge]]  ||align="right" |18 175 ||align="center" |1985||
+|-
+| [[Brugge]] ||[[Arrondissement Brugge|Brugge]]  ||align="right" |117 224 ||align="center" |1825||align="center" |1128
+|-
+| [[Damme]] ||[[Arrondissement Brugge|Brugge]] ||align="right" |10 899 ||align="center" |1985||align="center" |1180
+|-
+| [[Diksmude]]  ||[[Arrondissement Diksmude|Diksmude]] ||align="right" |15 733 ||align="center" |1825||align="center" |12e eeuw
+|-
+| [[Gistel]]  ||[[Arrondissement Oostende|Ostende]]  ||align="right" |11 125 ||align="center" |1985||align="center" |13e eeuw
+|-
+| [[Kortryk]] ||[[Arrondissement Kortryk|Kortryk]]  ||align="right" |73 657 ||align="center" |1825||align="center" |1127
+|-
+| [[Lo-Reninge|Lô-Rêninge]]  ||[[Arrondissement Diksmude|Diksmude]]  ||align="right" |3 306 ||||align="center" |1985||
+|-
+| [[Mêenn]] ||[[Arrondissement Kortryk|Kortryk]] ||align="right" |32 413 ||align="center" |1825||
+|-
+| [[Mêesn]] ||[[Arrondissement Yper|Yper]]  ||align="right" |988 ||align="center" |1985||
+|-
+| [[Nieuwpôort]] ||[[Arrondissement Veurne|Veurn]] ||align="right" |10 855 ||align="center" |1825||align="center" |1163
+|-
+| [[Oarelbeke]] ||[[Arrondissement Kortryk|Kortryk]]  ||align="right" |26 172 ||align="center" |1985||align="center" |1153
+|-
+| [[Ostende]] ||[[Arrondissement Oostende|Ostende]]  ||align="right" |68 931 ||align="center" |1825||align="center" |1267
+|-
+| [[Oudnburg]] ||[[Arrondissement Oostende|Ostende]] ||align="right" |8 929 ||align="center" |1985||
+|-
+| [[Poperienge]]  ||[[Arrondissement Yper|Yper]]  ||align="right" |19 623 ||align="center" |1825||align="center" |1147
+|-
+| [[Roeseloare]]  ||[[Arrondissement Roeseloare|Roeseloare]]  ||align="right" |55 775 ||align="center" |1825||align="center" |1250
+|-
+| [[Tielt]] ||[[Arrondissement Tielt|Tielt]] ||align="right" | 19 269 ||align="center" |1825||align="center" |1245
+|-
+| [[Toeroet]]  ||[[Arrondissement Brugge|Brugge]] ||align="right" |19 453 ||align="center" |1825||
+|-
+| [[Veurne|Veurn]] ||[[Arrondissement Veurne|Veurn]]  ||align="right" |11 843 ||align="center" |1825||
+|-
+| [[Woaregem]] ||[[Arrondissement Kortryk|Kortryk]] ||align="right" |35 852 ||align="center" |1999||
+|-
+| [[Wervik]] ||[[Arrondissement Yper|Yper]] ||align="right" |17 607 ||align="center" |1825||
+|-
+| [[Yper]]  ||[[Arrondissement Yper|Yper]]  ||align="right" |34 897 ||align="center" |1825||align="center" |1174
+|- 
+| [[Yzegem]] ||[[Arrondissement Roeseloare|Roeseloare]] ||align="right" |26 544 ||align="center" |1825||align="center" |1817 (titel)
+|-
+|}
+
+
 {{beg}}
 
 [[Categorie:Nederzettiengstype]]
