--- a/Stad.mw
+++ b/Stad.mw
@@ -11,49 +11,49 @@ In West-Vloandern zyn der 22 steedn (in heel [[Belgie]] 133), woavan de Brugge '
 ! '''Joar Keunienklik Besluut'''
 ! '''Joar Stadsrechten'''
 |-
-| [[Blanknberge]] ||[[Arrondissement Brugge|Brugge]]  ||align="right" |18 175 ||align="center" |1985||
+| [[Blanknberge]] ||[[Arrondissement Brugge|Brugge]]  ||align="right" |18.175 ||align="center" |1985||
 |-
-| [[Brugge]] ||[[Arrondissement Brugge|Brugge]]  ||align="right" |117 224 ||align="center" |1825||align="center" |1128
+| [[Brugge]] ||[[Arrondissement Brugge|Brugge]]  ||align="right" |117.224 ||align="center" |1825||align="center" |1128
 |-
-| [[Damme]] ||[[Arrondissement Brugge|Brugge]] ||align="right" |10 899 ||align="center" |1985||align="center" |1180
+| [[Damme]] ||[[Arrondissement Brugge|Brugge]] ||align="right" |10.899 ||align="center" |1985||align="center" |1180
 |-
-| [[Diksmude]]  ||[[Arrondissement Diksmude|Diksmude]] ||align="right" |15 733 ||align="center" |1825||align="center" |12e eeuw
+| [[Diksmude]]  ||[[Arrondissement Diksmude|Diksmude]] ||align="right" |15.733 ||align="center" |1825||align="center" |12e eeuw
 |-
-| [[Gistel]]  ||[[Arrondissement Oostende|Ostende]]  ||align="right" |11 125 ||align="center" |1985||align="center" |13e eeuw
+| [[Gistel]]  ||[[Arrondissement Oostende|Ostende]]  ||align="right" |11.125 ||align="center" |1985||align="center" |13e eeuw
 |-
-| [[Kortryk]] ||[[Arrondissement Kortryk|Kortryk]]  ||align="right" |73 657 ||align="center" |1825||align="center" |1127
+| [[Kortryk]] ||[[Arrondissement Kortryk|Kortryk]]  ||align="right" |73.657 ||align="center" |1825||align="center" |1127
 |-
-| [[Lo-Reninge|Lô-Rêninge]]  ||[[Arrondissement Diksmude|Diksmude]]  ||align="right" |3 306 ||||align="center" |1985||
+| [[Lo-Reninge|Lô-Rêninge]]  ||[[Arrondissement Diksmude|Diksmude]]  ||align="right" |3.306 ||||align="center" |1985||
 |-
-| [[Mêenn]] ||[[Arrondissement Kortryk|Kortryk]] ||align="right" |32 413 ||align="center" |1825||
+| [[Mêenn]] ||[[Arrondissement Kortryk|Kortryk]] ||align="right" |32.413 ||align="center" |1825||
 |-
 | [[Mêesn]] ||[[Arrondissement Yper|Yper]]  ||align="right" |988 ||align="center" |1985||
 |-
-| [[Nieuwpôort]] ||[[Arrondissement Veurne|Veurn]] ||align="right" |10 855 ||align="center" |1825||align="center" |1163
+| [[Nieuwpôort]] ||[[Arrondissement Veurne|Veurn]] ||align="right" |10.855 ||align="center" |1825||align="center" |1163
 |-
-| [[Oarelbeke]] ||[[Arrondissement Kortryk|Kortryk]]  ||align="right" |26 172 ||align="center" |1985||align="center" |1153
+| [[Oarelbeke]] ||[[Arrondissement Kortryk|Kortryk]]  ||align="right" |26.172 ||align="center" |1985||align="center" |1153
 |-
-| [[Ostende]] ||[[Arrondissement Oostende|Ostende]]  ||align="right" |68 931 ||align="center" |1825||align="center" |1267
+| [[Ostende]] ||[[Arrondissement Oostende|Ostende]]  ||align="right" |68.931 ||align="center" |1825||align="center" |1267
 |-
-| [[Oudnburg]] ||[[Arrondissement Oostende|Ostende]] ||align="right" |8 929 ||align="center" |1985||
+| [[Oudnburg]] ||[[Arrondissement Oostende|Ostende]] ||align="right" |8.929 ||align="center" |1985||
 |-
-| [[Poperienge]]  ||[[Arrondissement Yper|Yper]]  ||align="right" |19 623 ||align="center" |1825||align="center" |1147
+| [[Poperienge]]  ||[[Arrondissement Yper|Yper]]  ||align="right" |19.623 ||align="center" |1825||align="center" |1147
 |-
-| [[Roeseloare]]  ||[[Arrondissement Roeseloare|Roeseloare]]  ||align="right" |55 775 ||align="center" |1825||align="center" |1250
+| [[Roeseloare]]  ||[[Arrondissement Roeseloare|Roeseloare]]  ||align="right" |55.775 ||align="center" |1825||align="center" |1250
 |-
-| [[Tielt]] ||[[Arrondissement Tielt|Tielt]] ||align="right" | 19 269 ||align="center" |1825||align="center" |1245
+| [[Tielt]] ||[[Arrondissement Tielt|Tielt]] ||align="right" | 19.269 ||align="center" |1825||align="center" |1245
 |-
-| [[Toeroet]]  ||[[Arrondissement Brugge|Brugge]] ||align="right" |19 453 ||align="center" |1825||
+| [[Toeroet]]  ||[[Arrondissement Brugge|Brugge]] ||align="right" |19.453 ||align="center" |1825||
 |-
-| [[Veurne|Veurn]] ||[[Arrondissement Veurne|Veurn]]  ||align="right" |11 843 ||align="center" |1825||
+| [[Veurne|Veurn]] ||[[Arrondissement Veurne|Veurn]]  ||align="right" |11.843 ||align="center" |1825||
 |-
-| [[Woaregem]] ||[[Arrondissement Kortryk|Kortryk]] ||align="right" |35 852 ||align="center" |1999||
+| [[Woaregem]] ||[[Arrondissement Kortryk|Kortryk]] ||align="right" |35.852 ||align="center" |1999||
 |-
-| [[Wervik]] ||[[Arrondissement Yper|Yper]] ||align="right" |17 607 ||align="center" |1825||
+| [[Wervik]] ||[[Arrondissement Yper|Yper]] ||align="right" |17.607 ||align="center" |1825||
 |-
-| [[Yper]]  ||[[Arrondissement Yper|Yper]]  ||align="right" |34 897 ||align="center" |1825||align="center" |1174
+| [[Yper]]  ||[[Arrondissement Yper|Yper]]  ||align="right" |34.897 ||align="center" |1825||align="center" |1174
 |- 
-| [[Yzegem]] ||[[Arrondissement Roeseloare|Roeseloare]] ||align="right" |26 544 ||align="center" |1825||align="center" |1817 (titel)
+| [[Yzegem]] ||[[Arrondissement Roeseloare|Roeseloare]] ||align="right" |26.544 ||align="center" |1825||align="center" |1817 (titel)
 |-
 |}
 
