--- a/Yper.mw
+++ b/Yper.mw
@@ -48,7 +48,7 @@ Vodder èt Yper de twidde grotste mart van België, achter [[Sint-Nikloas]]. De 
 Schone pleksjes voe te goan bekykn, zyn: 
 <br clear="left" />
 *de loaknalln
-*de Sint-Moartns[[kathedroale]]
+*de [[Sint-Moartnskathedroale|Sint-Moartns]][[kathedroale]]
 *de [[Menepoorte]], woa da ze iedern oavend [[The Last Post]] ('n Last Post) bloazn
 *de vestn of vestiengn, da zyn d'oude verdedigiengsmeurn van [[Vauban]] uut de 17ste eeuwe round 't stee
 *Yper is oek ekend voe ze rally, de [[Belgium Ypres Westhoek Rally]]. In de vooksmoend: ''De 24 Eurn van Yper''. 'n Rally volt in 't latste weekend va juni. 't Komt doar ossan styf vele vook no kykn.
