*Empty MediaWiki Message*

--- a/Stad.mw
+++ b/Stad.mw
@@ -1,7 +1,7 @@
 E '''stad''' of een '''stee''' is e plekke woa dat er [[mens]]chn weunn. Steedn zyn mêestol grote dichtbebouwde plekkn, die 'n invloed en antrekkienge en ip de omliggnde gebiedn. In [[België]] zyn steedn [[gemêente|gemêentn]] die de noame "stad" als titel kunn droagn.
 
 ==Steedn in West-Vloandern==
-In West-Vloandern zyn der 22 steedn (in heel [[Belgie]] 133), woavan de Brugge 't mêeste iweuners et (bykan 120 000) en Mêesn 't minste (round de 1000)).
+In West-Vloandern zyn der 22 steedn (in heel [[Belgie]] 133), woavan da Brugge 't mêeste inweuners et (bykan 120 000) en Mêesn 't minste (round de 1000).
 
 <small>Inweunersantalln van 2006</small>
 {| class="prettytable sortable" style="font-size:85%"
@@ -23,7 +23,7 @@ In West-Vloandern zyn der 22 steedn (in heel [[Belgie]] 133), woavan de Brugge '
 |-
 | [[Kortryk]] ||[[Arrondissement Kortryk|Kortryk]]  ||align="right" |73.657 ||align="center" |1825||align="center" |1127
 |-
-| [[Lo-Reninge|Lô-Rêninge]]  ||[[Arrondissement Diksmude|Diksmude]]  ||align="right" |3.306 ||||align="center" |1985||
+| [[Lo-Reninge|Lô-Rêninge]]  ||[[Arrondissement Diksmude|Diksmude]]  ||align="right" |3.306 ||align="center" |1985||
 |-
 | [[Mêenn]] ||[[Arrondissement Kortryk|Kortryk]] ||align="right" |32.413 ||align="center" |1825||
 |-
